syntax = "proto3";

package embedding;


option go_package = "github.com/DamianoSamperi/microservices-demo-local/src/embeddingservice/genproto;embedding";

service EmbeddingService {
  rpc GenerateEmbedding(EmbeddingRequest) returns (EmbeddingResponse);
}

message EmbeddingRequest {
  bytes image = 1;  // immagine raw o codificata (es. PNG/JPEG)
}

message EmbeddingResponse {
  repeated float embedding = 1; // 384-dim vector
}
